--- a/HTML/dee/first.html
+++ b/HTML/dee/first.html
@@ -4,7 +4,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 body {font-family: Arial, Helvetica, sans-serif;
-background-image: url("logos\bg.jfif");
+background-image: url("C:\Users\deeks\Documents\GitHub\immersion-management-system\logos\bg.jfif");
 background-repeat: no-repeat;
 background-size: cover;}
 
